--- a/Donum/ClientApp/src/app/donations/donations.component.html
+++ b/Donum/ClientApp/src/app/donations/donations.component.html
@@ -1,22 +1,25 @@
-<h1 id="tableLabel">Members List</h1>
+<h1 id="tableLabel">Donations List</h1>
 
-<p *ngIf="!members?.length"><em>Loading...</em></p>
-
-<table class='table table-striped' aria-labelledby="tableLabel" *ngIf="members.length">
+<p *ngIf="!donations?.length"><em>Loading...</em></p>
+<div>
+  <input type="text" [(ngModel)]="memberName" (ngModelChange)="search()" placeholder="Search..." class="search-input">
+</div>
+<table *ngIf="donations.length" aria-labelledby="tableLabel" class='table table-striped'>
   <table>
     <thead>
     <tr>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Address</th>
+      <th>Member</th>
+      <th>Sum</th>
+      <th>Scope</th>
+      <th>Date</th>
     </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let member of members">
-
-    <td>{{member.firstName}}</td>
-      <td>{{member.lastName}}</td>
-      <td>{{member.address}}</td>
+    <tr *ngFor="let donation of donations">
+      <td>{{donation.member.firstName + " " + donation.member.lastName }}</td>
+      <td>{{donation.sum | currency}}</td>
+      <td>{{donation.scope}}</td>
+      <td>{{donation.dateOfReceived | date:'MM/dd/yyyy'}}</td>
     </tr>
     </tbody>
   </table>
