--- a/Donum/ClientApp/src/app/members/members.component.html
+++ b/Donum/ClientApp/src/app/members/members.component.html
@@ -1,24 +1,23 @@
-<h1 id="tableLabel">Weather forecast</h1>
+<h1 id="tableLabel">Members List</h1>
 
-<p>This component demonstrates fetching data from the server.</p>
+<p *ngIf="!members?.length"><em>Loading...</em></p>
 
-<p *ngIf="!forecasts?.length"><em>Loading...</em></p>
-
-<table class='table table-striped' aria-labelledby="tableLabel" *ngIf="forecasts.length">
-  <thead>
+<table class='table table-striped' aria-labelledby="tableLabel" *ngIf="members.length">
+  <table>
+    <thead>
     <tr>
-      <th>Date</th>
-      <th>Temp. (C)</th>
-      <th>Temp. (F)</th>
-      <th>Summary</th>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Address</th>
     </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let forecast of forecasts">
-      <td>{{ forecast.date }}</td>
-      <td>{{ forecast.temperatureC }}</td>
-      <td>{{ forecast.temperatureF }}</td>
-      <td>{{ forecast.summary }}</td>
+    </thead>
+    <tbody>
+    <tr *ngFor="let member of members">
+
+    <td>{{member.firstName}}</td>
+      <td>{{member.lastName}}</td>
+      <td>{{member.address}}</td>
     </tr>
-  </tbody>
+    </tbody>
+  </table>
 </table>
