--- a/Donum/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Donum/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -3,7 +3,7 @@
     class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
   >
     <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">HelloWorld</a>
+      <a class="navbar-brand" [routerLink]="['/']">Donum</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -33,8 +33,18 @@
             >
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/fetch-data']"
-              >Fetch data</a
+            <a class="nav-link text-dark" [routerLink]="['/members-list']"
+              >Members</a
+            >
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/donations-list']"
+              >Donations</a
+            >
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/import']"
+              >Import</a
             >
           </li>
         </ul>
