--- a/Donum/Pages/_ViewImports.cshtml
+++ b/Donum/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using HelloWorld
-@namespace HelloWorld.Pages
+﻿@using Donum
+@namespace Donum.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
