--- a/Donum/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Donum/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -47,6 +47,11 @@
               >Import</a
             >
           </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/report']"
+              >Report</a
+            >
+          </li>
         </ul>
         <app-login-menu></app-login-menu>
       </div>
