--- a/Donum/ClientApp/src/styles.css
+++ b/Donum/ClientApp/src/styles.css
@@ -1,3 +1,4 @@
+@import "~@angular/material/prebuilt-themes/purple-green.css";
 /* You can add global styles to this file, and also import other style files */
 
 /* Provide sufficient contrast against white background */
@@ -18,3 +19,6 @@ code {
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
